application/deid-roberta/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: janine-app
  labels:
    app: hospital-janine-app
    argocd.argoproj.io/instance: hospital-janine-app
    argocd.argoproj.io/managed-by: openshift-gitops
