application/deid-roberta/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: deid-roberta
        component: coco-sidecar
    name: deid-roberta-sidecar
    namespace: janine-app
spec:
    ports:
        - name: https
          port: 8443
          protocol: TCP
          targetPort: 8443
    selector:
        app: deid-roberta
    type: ClusterIP
